Защита от Сальника

--- a/src/components/general/General.module.css
+++ b/src/components/general/General.module.css
@@ -5,7 +5,7 @@
 
 .genTable {
     position: relative;
-    height: 80%;
+    height: 85%;
 }
 
 .tableBody {
@@ -24,7 +24,7 @@
     font-size: 35px;
     font-weight: 600;
     text-align: left;
-    padding: 15px;
+    padding: 10px 15px;
 }
 
 .tableHead {
