--- a/src/components/summaryTable/Summary.module.css
+++ b/src/components/summaryTable/Summary.module.css
@@ -2,3 +2,53 @@
     grid-area: s;
     border: 2px solid black;
 }
+
+.genTable {
+    position: relative;
+    height: 80%;
+}
+
+.tableBody {
+    width: 100%;
+    position: absolute;
+    height: 90%;
+    overflow-y: auto;
+}
+
+.tableBody::-webkit-scrollbar {
+    width: 0;
+}
+
+.titleTable {
+    display: flex;
+    align-items: center;
+
+    max-height: 20%;
+    font-size: 30px;
+    font-weight: 600;
+    text-align: left;
+    padding: 10px 15px;
+}
+
+.tableHead {
+    height: 15%;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-around;
+
+    background-color: cornflowerblue;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 5px;
+}
+
+
+.tableHead div {
+    flex-basis: 20%;
+}
+
+.tableHead .category {
+    flex-basis: 40%;
+}
