--- a/src/components/general/General.module.css
+++ b/src/components/general/General.module.css
@@ -9,9 +9,10 @@
 }
 
 .tableBody {
+    font-size: 13px;
     width: 100%;
     position: absolute;
-    height: 90%;
+    height: 85%;
     overflow-y: auto;
 }
 
@@ -28,6 +29,7 @@
 }
 
 .tableHead {
+    gap: 5px;
     height: 12%;
     display: flex;
     align-items: center;
